--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="./img/Product/hippie.png" alt="" class="sliderImg">
+                <img src="./img/Product/hippie.png" alt="" class="sliderImg" >
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">HIPPIE</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">RM299</h2>
@@ -86,7 +86,7 @@
                 </a>
             </div>            
             <div class="sliderItem">
-                <img src="./img/Product/adidas.png" alt="" class="sliderImg">
+                <img src="./img/Product/adidas.png" alt="" class="sliderImg" width="1000" height="1000" style="transform:rotate(30deg);">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">ADIDAS</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">RM199</h2>
@@ -230,6 +230,8 @@
                     <li class="fListItem">Blazer</li>
                     <li class="fListItem">Crater</li>
                     <li class="fListItem">Hippie</li>
+                    <li class="fListItem">Adidas</li>
+
                 </ul>
             </div>
         </div>
